# sdk-nrf-bm

./: .checkpatch.conf  CODEOWNERS
.github/workflows/: build_samples.yml  twister.yml
doc/nrf-bm/: install_nrf_bm.rst
lib/peer_manager/: Kconfig  peer_manager.c
lib/peer_manager/include/modules/: id_manager.h  peer_manager_internal.h
lib/peer_manager/modules/: auth_status_tracker.c  id_manager.c  nrf_ble_lesc.c  peer_data_storage.c  peer_manager_handler.c  security_dispatcher.c
samples/bluetooth/ble_hrs/src/: main.c
sysbuild/: Kconfig.bm
tests/lib/peer_manager/id_manager/: CMakeLists.txt  test_id_manager.json  testcase.yaml
tests/lib/peer_manager/id_manager/src/: unity_test.c
tests/lib/peer_manager/peer_data_storage/: CMakeLists.txt  testcase.yaml
tests/lib/peer_manager/peer_data_storage/src/: unity_test.c
tests/lib/peer_manager/security_dispatcher/: CMakeLists.txt
tests/lib/peer_manager/security_dispatcher/src/: unity_test.c
